src/objects/WGUCourseVersion__c.object
<CustomObject>
    <description>A version of a particular course.</description>
    <fields>
        <fullName>COSTITLE__c</fullName>
        <description>title for COS</description>
        <label>COSTITLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COSVersion__c</fullName>
        <description>Version number of COS</description>
        <label>COS Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CourseOfStudyId__c</fullName>
        <description>The ID for the course of study associated with this WGUCourseVersion.  Relationship is 1 to 1 WGUCourseVersion to Course Of Study</description>
        <label>Course Of Study ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LaunchDate__c</fullName>
        <description>The date this will take into effect.</description>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MajorVersion__c</fullName>
        <description>The major version of the course</description>
        <label>Major Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinorVersion__c</fullName>
        <description>The minor version of the Course</description>
        <label>Minor Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <externalId>true</externalId>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAMSCOURSEID__c</fullName>
        <description>related course in pams</description>
        <label>PAMSCOURSEID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAMSVERSIONID__c</fullName>
        <externalId>true</externalId>
        <label>PAMSVERSIONID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>The overall version of the Course</description>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WGUCourse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The course that this course version belongs to</description>
        <label>WGU Course</label>
        <referenceTo>WGUCourse__c</referenceTo>
        <relationshipLabel>WGU Course Versions</relationshipLabel>
        <relationshipName>WGUCourseVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this is active version.</description>
        <label>active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>title__c</fullName>
        <label>title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>WGU Course Version</label>
    <listViews>
        <fullName>All</fullName>
        <columns>WGUCourse__c</columns>
        <columns>MajorVersion__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>ENGL 1010</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>WGU Course Version code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WGU Course Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>